# aide-de-camp

aide-de-camp/: Cargo.toml
aide-de-camp-sqlite/: Cargo.toml  README.md
aide-de-camp-sqlite-bench/: Cargo.toml
aide-de-camp-sqlite-bench/src/: main.rs
aide-de-camp-sqlite/src/: lib.rs
aide-de-camp/src/: core.rs  lib.rs
aide-de-camp/src/core/: job_processor.rs
aide-de-camp/src/runner/: event_store.rs  job_event.rs  job_info.rs  job_router.rs  job_runner.rs  shutdown_options.rs  wrapped_job.rs
