[package]
edition = "2021"
name = "aide-de-camp-sqlite-bench"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide-de-camp = {path = "../aide-de-camp", version = "0.1.0"}
aide-de-camp-sqlite = {path = "../aide-de-camp-sqlite", version = "0.1.0"}
anyhow = "1.0.53"
async-trait = "0.1.52"
bincode = "2.0.0-beta.2"
futures = "0.3.21"
sqlx = {version = "0.6.2", default-features = false, features = ["sqlite", "offline", "chrono", "macros"]}
tokio = {version = "1", features = ["rt", "rt-multi-thread", "time", "macros"]}
