[package]
authors = ["Andrey Snow <andoriyu@gmail.com>"]
description = "SQLite implementation of Queue trait from aide-de-camp"
documentation = "https://docs.rs/aide-de-camp-sqlite"
edition = "2021"
keywords = ["job", "scheduler", "queue", "sqlite", "database"]
license = "MIT OR Apache-2.0"
name = "aide-de-camp-sqlite"
readme = "README.md"
repository = "https://github.com/zero-assumptions/aide-de-camp"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aide-de-camp = {path = "../aide-de-camp", version = "0.1.1", features = ["runner"]}
anyhow = "1.0.53"
async-trait = "0.1.52"
bincode = "2.0.0-rc.1"
sqlx = {version = "0.6.2", default-features = false, features = ["sqlite", "macros", "chrono", "offline", "migrate"]}
tracing = "0.1.30"

[dev-dependencies]
tokio = {version = "1", features = ["macros"]}
tracing-subscriber = "0.3.8"

[features]
default = ["rustls"]
native-tls = ["sqlx/runtime-tokio-native-tls"]
rustls = ["sqlx/runtime-tokio-rustls"]
